# typed-etl

./: .gitignore  config.yaml  pyproject.toml  scratch.py  scratch_file_reader.py  scratch_logger.py  scratch_pipeline.py  scratch_retry.py  scratch_transformer.py  scratch_validator.py  scratch_writer.py
Notes/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt
data/: employees.csv  employees.json  invalid_employees.csv  transform_employees.csv  valid_employees.csv
demo_app/: app.py  requirements.txt
examples/: basic_pipeline.py
output/: employees.csv  employees.json  employees.parquet  pipeline_output.parquet
src/typed_etl/: __init__.py  config_loader.py  exceptions.py  file_reader.py  logger.py  models.py  pipeline.py  retry.py  transformer.py  validator.py  writer.py
