[project]
name = "typed-etl"
version = "0.1.0"
description = "Production-grade typed ETL utility library"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>2.7",
    "pydantic-settings",
    "structlog>24.1",
    "tenacity>8.3",
    "polars>1.0",
    "PyYaml",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "mypy>1.10",
    "ruff>0.5",
    "pytest>8.2",
    "pytest-cov",
    "pytest-mock",
    "pre-commit",
    "types-pyyaml>=6.0.12.20260518",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
